fixed visibilty issue with role type in view all users section

--- a/client/src/pages/Accounts/ViewAccounts.css
+++ b/client/src/pages/Accounts/ViewAccounts.css
@@ -27,6 +27,7 @@
   border: 1px solid #e5e7eb;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  color: black;
 }
 
 .tab-button.active {
